--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,7 @@
 :root {
     --main_color: #2b2b2b;
     --secondary_color: #ededed;
+    --text_background: rgb(102, 102, 102);
 }
 
 * {
@@ -84,5 +85,6 @@ section div {
 .page-images {
     width: 100%;
     height: auto;
-    border: 2px var(--secondary_color) solid;
+    border: 5px var(--secondary_color) solid;
+    margin: 20px 0px;
 }
